
SVN
---

JDO:   Resolved issue CASTOR-1494 using contribution from Le Duc Bao [leducbao@gmail.com]
       Fixed inconsistencies between sql types in mapping and ddl scripts of CTF.
       Details: http://jira.codehaus.org/browse/CASTOR-1494
       (Ralf - 20060901)

XML:   Resolved issue CASTOR-1538 using contribution from Steven Dolg [stevendolg@gmx.at]
       Performance-related refactoring of XMLClassDescriptorResolverImpl.
       Details: http://jira.codehaus.org/browse/CASTOR-1538
       (Werner - 20060831)

JDO:   Resolved issue CASTOR-1487 using contribution from Gregory Block [gblock@ctoforaday.com]
       Fixed minor inconsistency in getting (expired) objects from EHCache.
       Details: http://jira.codehaus.org/browse/CASTOR-1487
       (Werner - 20060830)
       
XML:   Resolved issue CASTOR-1512 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Improved documentation of source generator Ant task.
       Details: http://jira.codehaus.org/browse/CASTOR-1512
       (Werner - 20060829)

XML:   Resolved issue CASTOR-1501 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with ignorance of java-type elements in binding file (for complex elements).
       Details: http://jira.codehaus.org/browse/CASTOR-1501
       (Werner - 20060824)

XML:   Resolved issue CASTOR-1508 using contribution from Phil Webb [phil.webb@card.co.uk]
       Various speed improvements related to inheritance search.
       Details: http://jira.codehaus.org/browse/CASTOR-1508
       (Werner - 20060824)

XML:   Resolved issue CASTOR-1489 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for abstract <complexType> definitions.
       Details: http://jira.codehaus.org/browse/CASTOR-1489
       (Werner - 20060824)

JDO:   Resolved issue CASTOR-1471 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for Progress.