@@ -38,6 +38,26 @@
                    
             </summary>
             <bugs>
+				<bug id="1537" tool="jira">
+                    <description>
+		                Added HOW-TO document for mapping lists at the root level
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </reporter>
+                    <type>Enh.</type>
+                    <module>XML</module>
+                    <date>20060904</date>
+                </bug>
                 <bug id="1494" tool="jira">
                     <description>
 		                Fixed inconsistencies between sql types in mapping and ddl scripts of CTF.
