@@ -36,6 +36,7 @@
             <ul>
                 <li><a href="how-to-map-a-collection.html">How to map a collection of elements</a></li>
                 <li><a href="how-to-map-a-hashtable.html">How to map a map/hashtable of elements</a></li>
+                <li><a href="how-to-map-a-list-at-root.html">How to map a list of elements at the root</a></li>
                 <li><a href="how-to-unmarshal-raw-xml.html">How to Unmarshal raw XML segments into arbitrary types</a></li>
                 <li><a href="how-to-use-references-in-xml.html">How to use references in XML and Castor</a></li>
                 <li><a href="how-to-wrap-a-collection-with-a-wrapper-element.html">How to wrap a collection with a wrapper element</a></li>
